<resources>
    <string name="app_name">Foodborne</string>
    <string name="desc">"  a"</string>
    <string name="macronutrients">Macronutrients</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="servings">serving/s</string>
    <string name="minutes">minute/s</string>
    <string name="none">None</string>
    <string name="kcal">kcal</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbohydrates</string>
    <string name="sugar">sugar</string>
    <string name="saturated">saturated</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="snack">Snack</string>
    <string name="dinner">Dinner</string>
    <string name="menuplanner">Menu Planner</string>
    <string name="success">Meal added successfully</string>
    <string name="deleted">Meal deleted successfully</string>
    <string name="failed">Error</string>
    <string name="previous"> Previous </string>
    <string name="next">Next</string>
    <string name="page11">Page 1/1</string>
    <string name="hint">Search recipe...</string>
    <string name="search">Search</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="glutenfree">Gluten Free</string>
    <string name="nolactose">No Lactose</string>
    <string name="goback">GO BACK</string>
    <string name="headerplanner">Don\'t know what to eat?</string>
    <string name="subheaderplanner">Planning your meals is now easier than ever!</string>
    <string name="startplanning">Start planning</string>
    <string name="validpagenumber">Please insert a valid page number</string>
    <string name="noresults">No results found</string>
    <string name="selectdate">Select a date</string>
    <string name="nomeal">There\'s no meal to delete</string>
    <string name="accept">Accept</string>
</resources>