<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/background"
            android:gravity="bottom"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtSearch"
                    android:layout_width="227dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:hint="@string/hint"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/btnSearch"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="69dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/verde_foodborne"
                    android:foregroundTint="#8BC34A"
                    android:text="@string/search"
                    android:textColorHighlight="#4CAF50"
                    app:rippleColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkVegetariano"
                    android:fontFamily="@font/lato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vegetarian" />

                <CheckBox
                    android:id="@+id/checkVegano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato"
                    android:text="@string/vegan" />

                <CheckBox
                    android:id="@+id/checkGluten"
                    android:fontFamily="@font/lato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/glutenfree" />

                <CheckBox
                    android:id="@+id/checkLactosa"
                    android:fontFamily="@font/lato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nolactose" />
            </LinearLayout>

        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recicler"
                android:layout_width="wrap_content"
                android:layout_height="515dp"
                tools:itemCount="50"

                tools:listitem="@layout/recycler_view_item">

            </androidx.recyclerview.widget.RecyclerView>


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtPages"
                    android:layout_width="486dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:hint="@string/page11"
                    android:inputType="number" />

                <Button
                    android:id="@+id/btnGo"
                    android:textColor="@color/white"
                    android:fontFamily="@font/lato_bold"
                    android:layout_width="402dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/verde_foodborne"
                    android:text="Go" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/background"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPre"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato_bold"
                    android:backgroundTint="@color/verde_foodborne"
                    android:text="@string/previous" />

                <Button
                    android:id="@+id/btnNext"
                    android:textColor="@color/white"
                    android:fontFamily="@font/lato_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/verde_foodborne"
                    android:text="@string/next" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>